matching label colours

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -275,16 +275,112 @@
 
   /* specific label colours: */
 
+  .label.types>.label.label-Adult {
+    background-color: #ffffb3 !important;
+}
+
+.label.types>.label.label-Anatomy {
+    background-color: #33a02c !important;
+}
+
+.label.types>.label.label-Cholinergic {
+    background-color: #bebada !important;
+}
+
+.label.types>.label.label-Clone {
+    background-color: #cab2d6 !important;
+}
+
+.label.types>.label.label-Cluster {
+    background-color: #ffed6f !important;
+}
+
+.label.types>.label.label-Dopaminergic {
+    background-color: #fdbf6f !important;
+}
+
+.label.types>.label.label-Expression_pattern {
+    background-color: #b3de69 !important;
+}
+
+.label.types>.label.label-Expression_pattern_fragment {
+    background-color: #6a3d9a !important;
+}
+
+.label.types>.label.label-GABAergic {
+    background-color: #1f78b4 !important;
+}
+
+.label.types>.label.label-Ganglion {
+    background-color: #ff7f00 !important;
+}
+
+.label.types>.label.label-Glutamatergic {
+    background-color: #b2df8a !important;
+}
+
+.label.types>.label.label-Larva {
+    background-color: #ccebc5 !important;
+}
+
+.label.types>.label.label-Motor_neuron {
+    background-color: #e31a1c !important;
+}
+
+.label.types>.label.label-Muscle {
+    background-color: #a6cee3 !important;
+}
+
+.label.types>.label.label-Nervous_system {
+    background-color: #fdb462 !important;
+}
+
+.label.types>.label.label-Neuromere {
+    background-color: #8dd3c7 !important;
+}
+
+.label.types>.label.label-Neuron {
+    background-color: #b15928 !important;
+}
+
+.label.types>.label.label-Neuron_projection_bundle {
+    background-color: #bc80bd !important;
+}
+
+.label.types>.label.label-Octopaminergic {
+    background-color: #ffff99 !important;
+}
+
+.label.types>.label.label-Peptidergic_neuron {
+    background-color: #80b1d3 !important;
+}
+
+.label.types>.label.label-Sensory_neuron {
+    background-color: #fb9a99 !important;
+}
+
+.label.types>.label.label-Serotonergic {
+    background-color: #d9d9d9 !important;
+}
+
+.label.types>.label.label-Synaptic_neuropil_block {
+    background-color: #fccde5 !important;
+}
+
+.label.types>.label.label-Synaptic_neuropil_domain {
+    background-color: #fb8072 !important;
+}
+
+.label.types>.label.label-Synaptic_neuropil_subdomain {
+    background-color: #88ffb3 !important;
+}
+
  .label.types>.label.label-Template {
     background-color: #ff6cc8 !important;
 }
 
  .label.types>.label.label-DataSet {
     background-color:#b700b5 !important;
-}
-
- .label.types>.label.label-Anatomy {
-    background-color:#00a2aa !important;
 }
 
  .label.types>.label.label-Synaptic_neuropil {
@@ -303,68 +399,12 @@
     background-color:#023f00 !important;
 }
 
-  .label.types>.label.label-Neuron {
-    background-color:#7f2100 !important;
-}
-
- .label.types>.label.label-Neuron_projection_bundle {
-    background-color:#d6007d !important;
-}
-
- .label.types>.label.label-Ganglion {
-    background-color:#d6007d !important;
-}
-
- .label.types>.label.label-Neuromere {
-    background-color:#d6007d !important;
-}
-
- .label.types>.label.label-GABAergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Dopaminergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Cholinergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Glutamatergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Octopaminergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Serotonergic {
-    background-color:#9551ff !important;
-}
-
- .label.types>.label.label-Motor_neuron {
-    background-color:#ff6a3a !important;
-}
-
- .label.types>.label.label-Sensory_neuron {
-    background-color:#ff6a3a !important;
-}
-
- .label.types>.label.label-Peptidergic_neuron {
-    background-color:#ff6a3a !important;
-}
-
  .label.types>.label.label-Glial_cell {
     background-color:#ff6a3a !important;
 }
 
  .label.types>.label.label-Cell {
     background-color:#ff6a3a !important;
-}
-
- .label.types>.label.label-Clone {
-    background-color:#d6007d !important;
 }
 
  .label.types>.label.label-Property {
@@ -377,10 +417,6 @@
 
  .label.types>.label.label-Site {
     background-color:#005f1d !important;
-}
-
-.label.types>.label.label-Expression_pattern {
-    background-color:#534700 !important;
 }
 
 .label.types>.label.label-Split {
