ensuring contrasting text colour

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -277,30 +277,37 @@
 
   .label.types>.label.label-Adult {
     background-color: #ffffb3 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Anatomy {
     background-color: #33a02c !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Cholinergic {
     background-color: #bebada !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Clone {
     background-color: #cab2d6 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Cluster {
     background-color: #ffed6f !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Dopaminergic {
     background-color: #fdbf6f !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Expression_pattern {
     background-color: #b3de69 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Expression_pattern_fragment {
@@ -313,14 +320,17 @@
 
 .label.types>.label.label-Ganglion {
     background-color: #ff7f00 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Glutamatergic {
     background-color: #b2df8a !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Larva {
     background-color: #ccebc5 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Motor_neuron {
@@ -329,14 +339,17 @@
 
 .label.types>.label.label-Muscle {
     background-color: #a6cee3 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Nervous_system {
     background-color: #fdb462 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Neuromere {
     background-color: #8dd3c7 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Neuron {
@@ -345,38 +358,47 @@
 
 .label.types>.label.label-Neuron_projection_bundle {
     background-color: #bc80bd !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Octopaminergic {
     background-color: #ffff99 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Peptidergic_neuron {
     background-color: #80b1d3 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Sensory_neuron {
     background-color: #fb9a99 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Serotonergic {
     background-color: #d9d9d9 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Synaptic_neuropil_block {
     background-color: #fccde5 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Synaptic_neuropil_domain {
     background-color: #fb8072 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Synaptic_neuropil_subdomain {
     background-color: #88ffb3 !important;
+    color: #3a3939;
 }
 
  .label.types>.label.label-Template {
     background-color: #ff6cc8 !important;
+    color: #3a3939;
 }
 
  .label.types>.label.label-DataSet {
@@ -385,6 +407,7 @@
 
  .label.types>.label.label-Synaptic_neuropil {
     background-color:#00a2aa !important;
+    color: #3a3939;
 }
 
  .label.types>.label.label-pub {
@@ -401,10 +424,12 @@
 
  .label.types>.label.label-Glial_cell {
     background-color:#ff6a3a !important;
+    color: #3a3939;
 }
 
  .label.types>.label.label-Cell {
     background-color:#ff6a3a !important;
+    color: #3a3939;
 }
 
  .label.types>.label.label-Property {
@@ -421,10 +446,12 @@
 
 .label.types>.label.label-Split {
     background-color:#e012e3 !important;
+    color: #3a3939;
 }
 
 .label.types>.label.label-Deprecated {
     background-color:#ff0000 !important;
+    color: #3a3939;
 }
 
 .button-bar-vfbHistoryLinks-back {
