--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -454,6 +454,100 @@
     color: #3a3939;
 }
 
+.label.types>.label.label-Gene {
+    background-color:#ffcdd2 !important;
+    color: #3a3939;
+}
+
+.label.types>.label.label-Allele {
+    background-color: #DCEDC8 !important;
+    color: black;
+}
+.label.types>.label.label-FBst {
+    background-color: #E1BEE7;
+    color: black;
+}
+.label.types>.label.label-Insertion {
+    background-color: #D1C4E9 !important;
+    color: black;
+}
+.label.types>.label.label-FB_Reference {
+    background-color: #dcf;
+    color: black;
+}
+.label.types>.label.label-FBcl {
+    background-color: #BBDEFB;
+    color: black;
+}
+.label.types>.label.label-FBtr {
+    background-color: #C5CAE9;
+    color: black;
+}
+.label.types>.label.label-FBpp {
+    background-color: #B3E5FC;
+    color: black;
+}
+.label.types>.label.label-FBab {
+    background-color: #B2EBF2;
+    color: black;
+}
+.label.types>.label.label-FBba {
+    background-color: #B2DFDB;
+    color: black;
+}
+.label.types>.label.label-FBte {
+    background-color: #C8E6C9;
+    color: black;
+}
+.label.types>.label.label-FBto {
+    background-color: #fb0;
+    color: black;
+}
+.label.types>.label.label-Transgenic_Construct {
+    background-color: #F8BBD0 !important;
+    color: black;
+}
+.label.types>.label.label-FBmc {
+    background-color: #F0F4C3;
+    color: black;
+}
+.label.types>.label.label-FBms {
+    background-color: #FFF9C4;
+    color: black;
+}
+.label.types>.label.label-FBsf {
+    background-color: #FFECB3;
+    color: black;
+}
+.label.types>.label.label-FBlc {
+    background-color: #FFE0B2;
+    color: black;
+}
+.label.types>.label.label-FBtc {
+    background-color: #FFCCBC;
+    color: black;
+}
+.label.types>.label.label-FBig {
+    background-color: #D7CCC8;
+    color: black;
+}
+.label.types>.label.label-FBgg {
+    background-color: #F5F5D5;
+    color: black;
+}
+.label.types>.label.label-FBhh {
+    background-color: #edb;
+    color: black;
+}
+.label.types>.label.label-FBsn {
+    background-color: #fdc;
+    color: black;
+}
+.label.types>.label.label-FB_Image {
+    background-color: #fe8;
+    color: black;
+}
+
 .button-bar-vfbHistoryLinks-back {
     position:absolute;
     left:10px;
