included but not likely

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -472,7 +472,7 @@
     color: black;
 }
 .label.types>.label.label-FB_Reference {
-    background-color: #dcf;
+    background-color: #dcf !important;
     color: black;
 }
 .label.types>.label.label-FBcl {
@@ -544,7 +544,7 @@
     color: black;
 }
 .label.types>.label.label-FB_Image {
-    background-color: #fe8;
+    background-color: #fe8 !important;
     color: black;
 }
 
