#1296 Style uploader to look like figma

--- a/css/VFBMain.less
+++ b/css/VFBMain.less
@@ -1674,3 +1674,12 @@ img[class^="VFBQuickHelp-image-"] {
 #querybuilder .query-item-option {
   padding: 0px 8px !important;
 }
+
+.uploaderButton {
+	border: solid 1px lightgrey !important;
+    color: black !important;
+}
+
+.selectedButton {
+	background-color : #F9FAFB !important;
+}
