--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -548,6 +548,11 @@
     color: black;
 }
 
+.label.types>.label.label-Thermosensory_system {
+    background-color: #AA0000 !important;
+    color: white;
+}
+
 .button-bar-vfbHistoryLinks-back {
     position:absolute;
     left:10px;
