adding all facets

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -428,7 +428,7 @@
 }
 
  .label.types>.label.label-Cell {
-    background-color:#ff6a3a !important;
+    background-color:#fbcf1d !important;
     color: #3a3939;
 }
 
@@ -547,10 +547,53 @@
     background-color: #fe8 !important;
     color: black;
 }
-
 .label.types>.label.label-Thermosensory_system {
     background-color: #AA0000 !important;
     color: white;
+}
+.label.types>.label.label-Neuroblast {
+    background-color: #8df8f9 !important;
+    color: black;
+}
+.label.types>.label.label-GMC {
+    background-color: #ecf7f7 !important;
+    color: black;
+}
+.label.types>.label.label-Mechanosensory_system {
+    background-color: #00aaaa !important;
+    color: black;
+}
+.label.types>.label.label-Visual_system {
+    background-color: #0000aa !important;
+    color: white;
+}
+.label.types>.label.label-Olfactory_system {
+    background-color: #00aa00 !important;
+    color: black;
+}
+.label.types>.label.label-Auditory_system {
+    background-color: #aa00aa !important;
+    color: white;
+}
+.label.types>.label.label-Gustatory__system {
+    background-color: #aaaa00 !important;
+    color: black;
+}
+.label.types>.label.label-Proprioceptive_system {
+    background-color: #00aaaa !important;
+    color: black;
+}
+.label.types>.label.label-Chemosensory_system {
+    background-color: #ea9e24 !important;
+    color: black;
+}
+.label.types>.label.label-Hygrosensory_system {
+    background-color: #0000ff !important;
+    color: white;
+}
+.label.types>.label.label-Nociceptive_system {
+    background-color: #ffa500 !important;
+    color: black;
 }
 
 .button-bar-vfbHistoryLinks-back {
