--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -595,6 +595,10 @@
     background-color: #ffa500 !important;
     color: black;
 }
+.label.types>.label.label-Stage {
+    background-color: #dfe !important;
+    color: black;
+}
 
 .button-bar-vfbHistoryLinks-back {
     position:absolute;
