colouring UPLOAD tag

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -710,6 +710,11 @@
     color: black;
 }
 
+.label.types>.label.label-UPLOAD {
+    background-color: #ff4902 !important;
+    color: black;
+}
+
 
 .button-bar-vfbHistoryLinks-back {
     position:absolute;
