Add styling for lineage labels in VFBTermInfo.less

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -285,6 +285,12 @@
     color: #3a3939;
 }
 
+/* Target all lineage labels */
+.label.types>.label[class*="label-lineage_"] {
+    background-color: #33a02c !important;
+    color: #3a3939;
+}
+
 .label.types>.label.label-Cholinergic {
     background-color: #bebada !important;
     color: #3a3939;
@@ -714,6 +720,7 @@
     background-color: #ff4902 !important;
     color: black;
 }
+
 
 
 .button-bar-vfbHistoryLinks-back {
