Add label click handlers and style for interactivity in VFBTermInfo

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -1286,3 +1286,13 @@ details[open] > summary > i.fa-chevron-circle-down {
 details[open] > summary > i.fa-chevron-circle-right {
     display: none;
 }
+
+/* Make label tags look clickable and add hover effect */
+.label.types > .label[class*="label-"] {
+  cursor: pointer;
+  transition: opacity 0.2s;
+  
+  &:hover {
+    opacity: 0.8;
+  }
+}
