Refactor labelTypeToID comments for clarity and update Gustatory system label in CSS

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -581,7 +581,7 @@
     background-color: #aa00aa !important;
     color: white;
 }
-.label.types>.label.label-Gustatory__system {
+.label.types>.label.label-Gustatory_system {
     background-color: #aaaa00 !important;
     color: black;
 }
