Update Peptidergic label references for consistency across configuration and styles

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -372,7 +372,7 @@
     color: #3a3939;
 }
 
-.label.types>.label.label-Peptidergic_neuron {
+.label.types>.label.label-Peptidergic {
     background-color: #80b1d3 !important;
     color: #3a3939;
 }
