--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -353,6 +353,11 @@
     color: #3a3939;
 }
 
+.label.types>.label.label-secondary_neuron {
+    background-color: #fdd962 !important;
+    color: #3a3939;
+}
+
 .label.types>.label.label-Neuromere {
     background-color: #8dd3c7 !important;
     color: #3a3939;
