Add primary neuron label type and corresponding styles

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -358,6 +358,11 @@
     color: #3a3939;
 }
 
+.label.types>.label.label-primary_neuron {
+    background-color: #fdd962 !important;
+    color: #3a3939;
+}
+
 .label.types>.label.label-Neuromere {
     background-color: #8dd3c7 !important;
     color: #3a3939;
