Set max-height for images in term info widget and remove global max-height for media elements

--- a/css/VFBTermInfo.less
+++ b/css/VFBTermInfo.less
@@ -870,10 +870,11 @@
 	color: white;
 	clear: both;
 	max-width: 100%;
+    max-height: 260px;
     margin-left: 25px;
 }
 
-/* Apply max-height only to images inside the term info widget */
+/* Apply max-height to images inside the term info widget */
 #vfbterminfowidget .popup-image img {
     max-height: 260px;
 }
